# vidzly-2025

./: .dockerignore  .env.example  .gitignore  ADDING_MCP_TOOLS.md  Dockerfile  IMPLEMENTATION_PLAN.md  MCPGUIDE.md  README.md  TEXT_TO_SPEECH.md  WORKFLOW_EXPLANATION.md  WORKFLOW_GUIDE.md  lefthook.yml  pyproject.toml  requirements.txt
.github/workflows/: check-file-size.yml  lint.yml  sync-to-hf.yml
.gradio/flagged/: dataset1.csv  dataset2.csv  dataset3.csv
src/app/: adk_session_manager.py  agent_helpers.py  app.py  introduction.py  workflow.py  workflow_agent.py  workflow_ui.py
src/app/mcps/: letter_counter.py  video_summarizer.py
src/app/tools/: frame_extractor.py  langchain_tools.py  music_selector.py  script_generator.py  subtitle_creator.py  text_to_speech.py  thumbnail_generation.py  thumbnail_generator.py  tool_schemas.py  video_clipper.py  video_composer.py  video_script_generator.py  video_summarizer.py
tests/: README.md  conftest.py  test_adk_integration.py  test_frame_extractor.py  test_music_selector.py  test_script_generator.py  test_subtitle_creator.py  test_text_to_speech.py  test_thumbnail_generator.py  test_video_clipper.py  test_video_composer.py  test_video_summarizer.py
