[tool.poetry]
name = "vidzly-2025"
version = "0.1.0"
description = ""
authors = ["honghanhh <hanh.usth@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = {extras = ["mcp"], version = "^6.0.0"}
google-genai = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
